overflow hidden FIX2

--- a/bac.css
+++ b/bac.css
@@ -100,6 +100,7 @@ section.emoji{
   color: #444;
   text-align: justify;
   margin: auto !important;
+  overflow: visible;
 }
 
 :-moz-any(.masonry){
